--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nerdnews",
+  "name": "NerdNews",
   "version": "1.0.0",
   "description": "News and Tech Blog",
   "main": "server.js",
@@ -22,10 +22,13 @@
     "bcrypt": "^5.0.1",
     "connect-session-sequelize": "^7.1.2",
     "dotenv": "^10.0.0",
+    "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
     "express-session": "^1.17.2",
-    "jest": "^27.4.7",
     "mysql2": "^2.3.3",
     "sequelize": "^6.12.5"
+  },
+  "devDependencies": {
+    "jest": "^27.4.7"
   }
 }
